# raceintospace

./: .gitmodules  CMakeLists.txt  mksnap  packit.yaml  raceintospace.spec
.copr/: Makefile
contrib/fedora/: 0001-Compile-under-clang.patch  mkarchive  mksnap  raceintospace.spec
contrib/flatpak/: org.raceintospace.Raceintospace.yml
debian/: README.source  changelog  control  copyright  get-tarball.sh  menu  raceintospace-data.install  raceintospace.1  raceintospace.install  raceintospace.manpages  rules  watch
debian/patches/: disable-sdl-icon.patch  downgrade_test-environment.patch  physfscompat.patch  series
src/display/: graphics.cpp  graphics.h  image.h  legacy_surface.h  palette.h  surface.cpp  surface.h
src/game/: CMakeLists.txt  admin.cpp  ast0.cpp  ast1.cpp  ast2.cpp  ast3.cpp  ast4.cpp  budget.cpp  data.cpp  endgame.cpp  game_main.cpp  intel.cpp  intro.cpp  museum.cpp  music.cpp  music.h  music_none.cpp  music_vorbis.cpp  music_vorbis.h  newmis.cpp  news.cpp  place.cpp  port.cpp  prefs.cpp  radar.cpp  rdplex.cpp  review.cpp  rush.cpp  sdlhelper.cpp  sdlhelper.h  vab.cpp
test/game/: downgrade_test.cpp
